--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                                 <span class="close">&times;</span>
                                 <img class="modal-content" id="img01">
                             </div>
-                            <h3 id="price">$225 USD</h3>
+                            <h3 id="price">SOLD OUT!</h3>
                             <div id="shop-container">
 
                                 <div id='product-component-1580936828176'></div>
